packages/integration/__tests__/__snapshots__/crafty-preset-babel-webpack.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles JavaScript 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                      status
  1 kB  0        ./js/script.js + 1 modules  built
  1 kB  1        multi ./js/script.js        built

  size  name     asset                       status
  1 kB  default  myBundle.min.js             emitted
  1 kB  default  myBundle.min.js.map         emitted



  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript 2`] = `
"!function(e,t){if(\\"object\\"==typeof exports&&\\"object\\"==typeof module)module.exports=t();else if(\\"function\\"==typeof define&&define.amd)define([],t);else{var n=t();for(var o in n)(\\"object\\"==typeof exports?exports:e)[o]=n[o]}}(window,function(){return function(e){var t={};function n(o){if(t[o])return t[o].exports;var r=t[o]={i:o,l:!1,exports:{}};return e[o].call(r.exports,r,r.exports,n),r.l=!0,r.exports}return n.m=e,n.c=t,n.d=function(e,t,o){n.o(e,t)||Object.defineProperty(e,t,{configurable:!1,enumerable:!0,get:o})},n.r=function(e){Object.defineProperty(e,\\"__esModule\\",{value:!0})},n.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(t,\\"a\\",t),t},n.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},n.p=\\"\\",n(n.s=1)}([function(e,t,n){\\"use strict\\";function o(e){return(o=\\"function\\"==typeof Symbol&&\\"symbol\\"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&\\"function\\"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?\\"symbol\\":typeof e})(e)}function r(e,t){return(r=Object.setPrototypeOf||function(e,t){return e.__proto__=t,e})(e,t)}function i(e,t){for(var n=0;n<t.length;n++){var o=t[n];o.enumerable=o.enumerable||!1,o.configurable=!0,\\"value\\"in o&&(o.writable=!0),Object.defineProperty(e,o.key,o)}}function u(e,t){return!t||\\"object\\"!==o(t)&&\\"function\\"!=typeof t?function(e){if(void 0===e)throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");return e}(e):t}function c(e){return(c=Object.getPrototypeOf||function(e){return e.__proto__})(e)}n.r(t);var f=function(e){function t(){var e,n,o;!function(e,t){if(!(e instanceof t))throw new TypeError(\\"Cannot call a class as a function\\")}(this,t);for(var r=arguments.length,i=new Array(r),f=0;f<r;f++)i[f]=arguments[f];return u(o,(n=o=u(this,(e=c(t)).call.apply(e,[this].concat(i))),o.handleClick=function(){o.setState({hey:!0})},n))}var n,o,f;return n=t,(o=[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}])&&i(n.prototype,o),f&&i(n,f),function(e,t){if(\\"function\\"!=typeof t&&null!==t)throw new TypeError(\\"Super expression must either be null or a function\\");r(e.prototype,t&&t.prototype),t&&r(e,t)}(t,e),t}(React.Component);function a(e,t){for(var n=0;n<t.length;n++){var o=t[n];o.enumerable=o.enumerable||!1,o.configurable=!0,\\"value\\"in o&&(o.writable=!0),Object.defineProperty(e,o.key,o)}}n.d(t,\\"default\\",function(){return l});var l=function(){function e(){!function(e,t){if(!(e instanceof t))throw new TypeError(\\"Cannot call a class as a function\\")}(this,e),console.log(\\"init class\\")}var t,n,o;return t=e,(n=[{key:\\"method\\",value:function(){console.log(f)}}])&&a(t.prototype,n),o&&a(t,o),e}()},function(e,t,n){e.exports=n(0)}])});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles JavaScript with externals 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/externals/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                              status
  1 kB  0        external \\"somelibrary/thing/stuff\\"  built
  1 kB  1        ./js/script.js + 1 modules          built
  1 kB  2        multi ./js/script.js                built

  size  name     asset                               status
  1 kB  default  myBundle.min.js                     emitted
  1 kB  default  myBundle.min.js.map                 emitted



  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript with externals 2`] = `
"!function(e,t){if(\\"object\\"==typeof exports&&\\"object\\"==typeof module)module.exports=t(require(\\"somelibrary/thing/stuff\\"));else if(\\"function\\"==typeof define&&define.amd)define([\\"somelibrary/thing/stuff\\"],t);else{var n=\\"object\\"==typeof exports?t(require(\\"somelibrary/thing/stuff\\")):t(e[\\"somelibrary/thing/stuff\\"]);for(var r in n)(\\"object\\"==typeof exports?exports:e)[r]=n[r]}}(window,function(e){return function(e){var t={};function n(r){if(t[r])return t[r].exports;var o=t[r]={i:r,l:!1,exports:{}};return e[r].call(o.exports,o,o.exports,n),o.l=!0,o.exports}return n.m=e,n.c=t,n.d=function(e,t,r){n.o(e,t)||Object.defineProperty(e,t,{configurable:!1,enumerable:!0,get:r})},n.r=function(e){Object.defineProperty(e,\\"__esModule\\",{value:!0})},n.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(t,\\"a\\",t),t},n.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},n.p=\\"\\",n(n.s=2)}([function(t,n){t.exports=e},function(e,t,n){\\"use strict\\";n.r(t);var r=n(0),o=n.n(r);function i(e){return(i=\\"function\\"==typeof Symbol&&\\"symbol\\"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&\\"function\\"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?\\"symbol\\":typeof e})(e)}function u(e,t){return(u=Object.setPrototypeOf||function(e,t){return e.__proto__=t,e})(e,t)}function f(e,t){for(var n=0;n<t.length;n++){var r=t[n];r.enumerable=r.enumerable||!1,r.configurable=!0,\\"value\\"in r&&(r.writable=!0),Object.defineProperty(e,r.key,r)}}function c(e,t){return!t||\\"object\\"!==i(t)&&\\"function\\"!=typeof t?function(e){if(void 0===e)throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");return e}(e):t}function a(e){return(a=Object.getPrototypeOf||function(e){return e.__proto__})(e)}var l=function(e){function t(){var e,n,r;!function(e,t){if(!(e instanceof t))throw new TypeError(\\"Cannot call a class as a function\\")}(this,t);for(var o=arguments.length,i=new Array(o),u=0;u<o;u++)i[u]=arguments[u];return c(r,(n=r=c(this,(e=a(t)).call.apply(e,[this].concat(i))),r.handleClick=function(){r.setState({hey:!0})},n))}var n,r,o;return n=t,(r=[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}])&&f(n.prototype,r),o&&f(n,o),function(e,t){if(\\"function\\"!=typeof t&&null!==t)throw new TypeError(\\"Super expression must either be null or a function\\");u(e.prototype,t&&t.prototype),t&&u(e,t)}(t,e),t}(React.Component);function s(e,t){for(var n=0;n<t.length;n++){var r=t[n];r.enumerable=r.enumerable||!1,r.configurable=!0,\\"value\\"in r&&(r.writable=!0),Object.defineProperty(e,r.key,r)}}n.d(t,\\"default\\",function(){return p});var p=function(){function e(){!function(e,t){if(!(e instanceof t))throw new TypeError(\\"Cannot call a class as a function\\")}(this,e),console.log(\\"init class\\")}var t,n,r;return t=e,(n=[{key:\\"method\\",value:function(){console.log(l,o.a)}}])&&s(t.prototype,n),r&&s(t,r),e}()},function(e,t,n){e.exports=n(1)}])});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Does not transpile on modern browsers 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/no-old-browser/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                      status
  1 kB  0        ./js/script.js + 1 modules  built
  1 kB  1        multi ./js/script.js        built

  size  name     asset                       status
  1 kB  default  myBundle.min.js             emitted
  1 kB  default  myBundle.min.js.map         emitted



  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Does not transpile on modern browsers 2`] = `
"!function(e,t){if(\\"object\\"==typeof exports&&\\"object\\"==typeof module)module.exports=t();else if(\\"function\\"==typeof define&&define.amd)define([],t);else{var n=t();for(var o in n)(\\"object\\"==typeof exports?exports:e)[o]=n[o]}}(window,function(){return function(e){var t={};function n(o){if(t[o])return t[o].exports;var r=t[o]={i:o,l:!1,exports:{}};return e[o].call(r.exports,r,r.exports,n),r.l=!0,r.exports}return n.m=e,n.c=t,n.d=function(e,t,o){n.o(e,t)||Object.defineProperty(e,t,{configurable:!1,enumerable:!0,get:o})},n.r=function(e){Object.defineProperty(e,\\"__esModule\\",{value:!0})},n.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(t,\\"a\\",t),t},n.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},n.p=\\"\\",n(n.s=1)}([function(e,t,n){\\"use strict\\";n.r(t);class o extends React.Component{constructor(...e){var t;return t=super(...e),this.handleClick=(()=>{this.setState({hey:!0})}),t}render(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}n.d(t,\\"default\\",function(){return r});class r{constructor(){console.log(\\"init class\\")}method(){console.log(o)}}},function(e,t,n){e.exports=n(0)}])});
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stderr": "[js_myBundle] (!) Errors were found
js/script.js
[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Error: Errors were found
    ...stacktrace...
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/fails/js/script.js
  15:1  error  Parsing error: Unexpected token

  13 |
  14 | }
> 15 |
     | ^

✖ 1 problem (1 error, 0 warnings)

",
}
`;

exports[`Lints JavaScript with webpack 1`] = `
Object {
  "status": 1,
  "stderr": "[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Error: Webpack compilation failed
    ...stacktrace...
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name  module                      status
  1 kB  0     ./js/script.js + 1 modules  built ✖
  1 kB  1     multi ./js/script.js        built

  (2 assets hidden)

  Failed to compile.

./js/Component.js

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/js/Component.js
  11:3   error  Opening curly brace does not appear on the same line as controlling statement  brace-style
  12:13  error  Multiple spaces found before '<'                                               no-multi-spaces

✖ 2 problems (2 errors, 0 warnings)
  2 errors, 0 warnings potentially fixable with the \`--fix\` option.

 @ ./js/script.js 8:0-39 26:33-42
 @ multi ./js/script.js

./js/script.js

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/js/script.js
   3:24  error    Multiple spaces found before '\\"./Component.js\\"'                                no-multi-spaces
   5:10  error    'test' is defined but never used                                               no-unused-vars
   5:19  error    A space is required after ','                                                  comma-spacing
   6:1   error    Expected indentation of 2 spaces but found 3                                   indent
  11:5   warning  Unexpected console statement                                                   no-console
  15:5   warning  Unexpected console statement                                                   no-console
  15:19  error    Multiple spaces found before '\\"some method\\"'                                   no-multi-spaces
  15:33  error    A space is required after ','                                                  comma-spacing
  15:33  error    There should be no space before ','                                            comma-spacing
  19:3   error    Opening curly brace does not appear on the same line as controlling statement  brace-style
  20:14  error    Expected '===' and instead saw '=='                                            eqeqeq

✖ 11 problems (9 errors, 2 warnings)
  7 errors, 0 warnings potentially fixable with the \`--fix\` option.

 @ multi ./js/script.js

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

",
}
`;

exports[`Removes unused classes 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/tree-shaking/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                     status
  1 kB  0        ./js/index.js + 2 modules  built
  1 kB  1        multi ./js/index.js        built

  size  name     asset                      status
  1 kB  default  myBundle.min.js            emitted
  1 kB  default  myBundle.min.js.map        emitted



  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
